--- a/angular.json
+++ b/angular.json
@@ -39,11 +39,11 @@
           }
         }
       }
-    },
+    }
   },
   "cli": {
     "analytics": "043a2015-5fc9-475f-8584-ee4f1a29dca6",
     "defaultCollection": "@angular-eslint/schematics"
   },
-  "defaultProject": "gallery-app"
+  "defaultProject": "@kolkov/ngx-gallery"
 }
